fix: history view webkit scrollbar hidden

--- a/apps/knowledge-fe/src/styles/reset.scss
+++ b/apps/knowledge-fe/src/styles/reset.scss
@@ -28,4 +28,10 @@ body {
 		border-radius: 0;
 		outline: none;
 	}
+
+	&.webkit-scrollbar-hidden {
+		&::-webkit-scrollbar {
+			display: none;
+		}
+	}
 }
